fixed appearance of validation messags on login page to align with the entire application

--- a/src/app/rootModule/pages/login/login.scss
+++ b/src/app/rootModule/pages/login/login.scss
@@ -11,4 +11,13 @@ page-login {
     height: auto;
     margin: 20px auto;
   }
+
+  p.error-message-text {
+    font-size: 1em;
+    color: #ea6153;
+    margin-left: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-top: 1px solid red;
+  }
 }
